#
# Copyright (c) 2024 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "entry"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "elide"

[features]
default = [
  "allocator",
  "entry-v1",
]
entry-v1 = []
entry-v2 = []
allocator = [
  "mimalloc",
]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
bumpalloc = ["dep:bumpalo"]

[build-dependencies]
bindgen = { workspace = true }
builder = { workspace = true }

[dependencies]
substrate = { workspace = true }
umbrella = { workspace = true }
libloading = { workspace = true }
bumpalo = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
