#
# Copyright (c) 2024-2025 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "local-ai"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "elideai"
path = "src/main.rs"

[features]
cuda = []
vulkan = []
aitool = ["tokio"]
default = ["aitool", "nonblocking", "blocking"]
unsafe = []
blocking = []
nonblocking = []
debug = []

[build-dependencies]
builder = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
encoding_rs = { workspace = true }
hf-hub = { workspace = true }
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
exec = { workspace = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
lazy_static = { workspace = true }

[target.'cfg(target_env = "gnu")'.dependencies.llama-cpp-2]
workspace = true
default-features = true

[target.'cfg(target_env = "musl")'.dependencies.llama-cpp-2]
workspace = true
default-features = false

[target.x86_64-apple-darwin.dependencies.llama-cpp-2]
workspace = true
default-features = true

[target.aarch64-apple-darwin.dependencies.llama-cpp-2]
workspace = true
default-features = true
