[package]
name = "substrate"
edition = "2021"
license = "MIT"
workspace = "../.."

[lib]
name = "gvmcapi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
jni-sys = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
