#
# Copyright (c) 2024 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "trace"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
substrate = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-core = { workspace = true }
tracing-futures = { workspace = true }
tracing-serde = { workspace = true }
tracing-attributes = { workspace = true }
tracing-subscriber = { workspace = true }
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
once_cell = { workspace = true }

[build-dependencies]
builder = { workspace = true }
