#
# Copyright (c) 2024 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "transport"
edition = "2024"
license = "MIT"
workspace = "../.."
version = "1.0.0-alpha13-SNAPSHOT"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
boring = { workspace = true }
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
jni-sys = { workspace = true }

[build-dependencies]
builder = { workspace = true }
bindgen = { workspace = true }
cc = { workspace = true }
