#
# Copyright (c) 2024 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "web"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []
mdx = ["dep:mdxjs"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# lol_html = { workspace = true }
lightningcss = { workspace = true }
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
diag = { workspace = true }
parcel_sourcemap = { workspace = true }
minify-html = { workspace = true }
# minify-html-onepass = { workspace = true }
# cookie = { workspace = true }
# sourcemap = { workspace = true }
grass = { workspace = true }
# oxvg = { workspace = true }
mdxjs = { workspace = true, optional = true }
markdown = { workspace = true }
browserslist-rs = { workspace = true }
media = { workspace = true }
