[package]
name = "umbrella"
version = "0.1.0"
edition = "2024"
workspace = "../.."
publish = false
license = "MIT"

[lib]
name = "umbrella"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = [
  "lib",
  "all",
  "entry",
  "js",
  "oro",
]
allocator = [
  "allocator_mimalloc",
]
allocator_mimalloc = ["mimalloc/default"]
all = [
  "js",
  "jvm",
]
diag = []
js = ["oro"]
jvm = []
lib = ["jni/default"]
entry = ["jni/invocation"]
python = []
uv = ["tokio", "dep:uv"]
oro = ["tokio", "orogene"]
oxc = []
ruff = ["dep:ruff"]
jemalloc = ["tikv-jemallocator"]
bumpalloc = ["bumpalo"]
ruby = []
wasm = []
biome = []
experimental = ["ruby", "bumpalloc"]

[lints.rust]
dead_code = "allow"

[dependencies]
## Local
exec = { workspace = true }
## Compile
clap = { workspace = true, features = ["derive", "string", "wrap_help"] }
console-subscriber = { workspace = true }
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
jni-sys = { workspace = true }
miette = { workspace = true }
mimalloc = { workspace = true, optional = true }
serde = { workspace = true }
bumpalo = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
typeshare = { workspace = true }

## Orogene
orogene = { workspace = true, optional = true }

## Ruff & Uv
ruff = { workspace = true, optional = true }
uv = { workspace = true, optional = true }

[build-dependencies]
builder = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["anyhow", "entry", "oxc", "sqlite"]
